[package]
name = "blocky"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bevy_egui = "0.38.0"
bevy_framepace = "0.20.1"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
noisy_bevy = "0.11.0"

[dependencies.bevy]
version = "0.17.3"
default-features = false
features = [
  "bevy_camera",
  "bevy_color",
  "bevy_gizmos",
  "bevy_light",
  "bevy_log",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_shader",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "multi_threaded",
  "tonemapping_luts",
  "x11",
  "png",
  "zstd_rust",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
lalrpop = "0.22.2"
