[package]
name = "momoe"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bevy_fix_cursor_unlock_web = "0.3.0"
bevy_framepace = "0.21.0"
lalrpop-util = { version = "0.23.0", features = ["lexer"] }
noisy_bevy = "0.13.0"
rand = { version = "0.10.0", default-features = false }
ron = "0.12.0"

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = [
  "asset_processor",
  "bevy_asset",
  "bevy_camera",
  "bevy_color",
  "bevy_dev_tools",
  "bevy_gizmos",
  "bevy_gizmos_render",
  "bevy_light",
  "bevy_log",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_shader",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_render",
  "bevy_window",
  "multi_threaded",
  "png",
  "tonemapping_luts",
  "wayland",
  "web",
  "webgpu",
  "zstd_rust",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# lto = true
# codegen-units = 1

[build-dependencies]
lalrpop = "0.23.0"
